(copy_files# parsing/*.ml{,i})
(copy_files# driver/*.ml{,i})
(copy_files# transpile/*.ml{,i})

(library
 (name fgecommon)
 (wrapped false)
 (libraries core)
 (modules
    asttypes
    location
    longident
    ast_helper
    ast
    parser
    lexer
    printer
    syntaxerr)
 (modules_without_implementation asttypes))

(library
  (name fgetranspile)
  (wrapped false)
  (libraries core fgecommon)
  (modules toocaml))

(executable
  (name replmain)
  (modes byte)
  (libraries core ANSITerminal fgecommon fgetranspile)
  (modules replmain))

(executable
  (name fgec)
  (modes byte)
  (libraries core fgecommon fgetranspile)
  (modules fgec))

;(excutable
;  (name main)
;  (modes byte)
;  (libraries core fgecommon)
;  (modules main))
